# waver--cli

./: LICENSE  README.md  publish.bat  pyproject.toml  test.bat  test_suite.py  waver_config.json
src/: pyproject.toml
src/waver/: __init__.py  __main__.py  cli.py  client.py  config.py  constants.py  executor.py  main.py  providers.py  ui.py
src/waver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/waver_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
