[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waver-cli"
version = "1.0.2"
description = "AI CLI tool with multi-provider support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Waver", email = "waver@example.com"}
]
keywords = ["cli", "ai", "chat", "nvidia", "openai", "deepseek", "kimi", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
waver = "waver.cli:main"

[project.urls]
Homepage = "https://github.com/waver/waver-cli"
Repository = "https://github.com/waver/waver-cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
waver = ["*.txt"]
