[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waver"
version = "2.0.1"
description = "Modern AI CLI Tool with multiple provider support"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Waver Team"}
]
keywords = ["ai", "cli", "chatgpt", "openai", "claude", "llm", "nvidia", "deepseek", "kimi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "keyring>=23.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
waver = "waver.main:chat"

[project.urls]
Homepage = "https://github.com/waverlose/waver"
Repository = "https://github.com/waverlose/waver"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
